Fix layout without sidebar gap

--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -306,11 +306,6 @@ p.explication {
   padding: 10px 25px 12px 25px;
   font-size: 1.1em;
   border-radius: 50px;
-  min-width: 100px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  display: block;
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -328,10 +323,6 @@ p.explication {
 .bouton[disabled] {
   opacity: 0.4;
   cursor: not-allowed;
-}
-
-.bouton:hover {
-  padding: 10px 20px 12px 30px;
 }
 
 .bouton span {
