--- a/resources/css/calendrier/_calendrier.scss
+++ b/resources/css/calendrier/_calendrier.scss
@@ -56,7 +56,7 @@
 }
 
 .bouton {
-    padding: 10px;
+    padding: 10px 30px;
     margin-left: 20px;
     margin-right: 20px;
 }
