--- a/resources/css/importants/layout-without-sidebar.scss
+++ b/resources/css/importants/layout-without-sidebar.scss
@@ -2,4 +2,5 @@
 
 #content {
     grid-template-columns: 1fr;
+    grid-gap: 45px 0;
 }
